apps/container-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-docs-ingress
  annotations:
spec:
  rules:
    - host: sre.aldev.k8s.cocci.com
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: sre-docs
                port:
                  number: 8080
